--- a/src/ernie/ernie.cabal
+++ b/src/ernie/ernie.cabal
@@ -42,6 +42,7 @@ library
   exposed-modules:
     Ernie
     Ernie.Chart
+    Ernie.CLI
     Ernie.Example
     Ernie.Export
     Ernie.Measure
@@ -65,8 +66,12 @@ library
     , profunctors
     , algebraic-graphs
     , reflection
+    , tdigest
+    , optparse-applicative
+    , bytestring
 
 executable ernie
-  import:           base
+  import:           base, project-config
   main-is:          Main.hs
   hs-source-dirs:   app
+  build-depends: ernie
