Add --watch switch

--- a/src/ernie/ernie.cabal
+++ b/src/ernie/ernie.cabal
@@ -67,6 +67,8 @@ library
     , tdigest
     , optparse-applicative
     , bytestring
+    , fsnotify
+    , filepath
 
 executable ernie
   import:           base, project-config
