Add groups of tasks

--- a/src/ernie/ernie.cabal
+++ b/src/ernie/ernie.cabal
@@ -63,12 +63,12 @@ library
     , transformers
     , lens
     , profunctors
-    , algebraic-graphs
     , tdigest
     , optparse-applicative
     , bytestring
     , fsnotify
     , filepath
+    , graphviz
 
 executable ernie
   import:           base, project-config
