--- a/src/ernie/ernie.cabal
+++ b/src/ernie/ernie.cabal
@@ -1,18 +1,18 @@
 cabal-version:      2.4
 name:               ernie
-version:            0.1.0.0
+version:            0.2.0.0
 
 synopsis: Project planning with PERT estimates
 bug-reports: https://github.com/j-mueller/ernie
 license: BSD-3-Clause
 author:             Jann Müller
 maintainer:         j-mueller@users.noreply.github.com
-copyright: (c) 2022 Jann Müller
+copyright: (c) 2024 Jann Müller
 category: planning
 extra-source-files: CHANGELOG.md
 
 common base
-  build-depends: base ^>=4.14.3.0
+  build-depends: base >=4.14 && < 5
 
 common project-config
   default-language:     Haskell2010
