--- a/.github/workflows/ci-linux.yaml
+++ b/.github/workflows/ci-linux.yaml
@@ -24,7 +24,7 @@ jobs:
             ~/.cabal
           key: cabal
 
-      - uses: haskell/actions/setup@v1
+      - uses: haskell-actions/setup@v2.7.9
         with:
           ghc-version: '9.8.4'
           cabal-version: '3.12.1.0'
@@ -32,7 +32,7 @@ jobs:
       - name: Haskell tools
         run: cabal install --overwrite-policy=always c2hs stylish-haskell
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: stylish-haskell
         run: |
