--- a/.github/workflows/ci-linux.yaml
+++ b/.github/workflows/ci-linux.yaml
@@ -2,6 +2,7 @@ name: ci-linux
 on:
   pull_request:
   push:
+    branches: ["main"]
     paths:
       - '.github/workflows/ci-linux.yaml'
       - 'cabal.project'
